# sick_flexisoft_ros2

sick_flexisoft_ros2/: README.md
sick_flexisoft_ros2/cob_safety_controller/: CHANGELOG.rst  CMakeLists.txt  package.xml
sick_flexisoft_ros2/cob_safety_controller/cfg/: safety_controller.yaml
sick_flexisoft_ros2/cob_safety_controller/common/include/cob_safety_controller/: laser_fields.h  safety_controllerConfig.h  safety_controller_common.h
sick_flexisoft_ros2/cob_safety_controller/common/src/: laser_fields.cpp
sick_flexisoft_ros2/cob_safety_controller/ros/src/: flexisoft_sim.py  safety_controller_ros.cpp
sick_flexisoft_ros2/sick_flexisoft_client/: CHANGELOG.rst  CMakeLists.txt  package.xml
sick_flexisoft_ros2/sick_flexisoft_client/include/sick_flexisoft_client/: flexiclient.h  flexiproto.h
sick_flexisoft_ros2/sick_flexisoft_client/src/: flexiclient.cpp
sick_flexisoft_ros2/sick_flexisoft_ros2/: CHANGELOG.rst  CMakeLists.txt  package.xml
