<?xml version="1.0"?>
<package format="3">
  <name>cob_safety_controller</name>
  <version>0.1.7</version>
  <description>Safety controller for Care-O-bot 4</description>

  <maintainer email="fmw@ipa.fhg.de">Florian Weisshardt</maintainer>
  <author email="fmw@ipa.fhg.de">Florian Weisshardt</author>

  <license>BSD</license>

  <build_depend>ament_cmake</build_depend>

  <depend>cmake_modules</depend>
  <depend>cob_msgs</depend>
  <depend>cob_srvs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>diagnostic_updater</depend>
  <!-- <depend>dynamic_reconfigure</depend> -->
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <!-- <depend>sick_flexisoft_client</depend> -->
  <depend>std_msgs</depend>
  <!-- <depend>tinyxml2_vendor</depend> -->
  <depend>visualization_msgs</depend>

  <exec_depend>ros2</exec_depend>
</package>

<!-- <?xml version="1.0"?>
<package format="2">
  <name>cob_safety_controller</name>
  <version>0.1.7</version>
  <description>Safety controller for Care-O-bot 4</description>

  <maintainer email="fmw@ipa.fhg.de">Florian Weisshardt</maintainer>
  <author email="fmw@ipa.fhg.de">Florian Weisshardt</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cmake_modules</depend>
  <depend>cob_msgs</depend>
  <depend>cob_srvs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>sick_flexisoft_client</depend>
  <depend>std_msgs</depend>
  <depend>tinyxml2</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>rospy</exec_depend>

</package> -->
